[package]
name = "rustupArduino"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"


[dependencies]
panic-halt = "0.2.0"

[dependencies.servo]
servo = {path = "../servo"}

[dependencies.arduino-hal]
git = "https://github.com/Rahix/avr-hal"
rev = "92d540c"
features = ["arduino-uno"]
